# curso_langchain_langraph

./: .gitignore  main.py  pyproject.toml
LG_Tema_4/: 1.0.Notas_LG.md  2.0.Proyecto_langraph.md  3.0.annotated_types_langgraph.py
Tema_1/: 1.langchain_con_openai.py  2.langchain_con_google.py  3.langchain_con_openai_avanzado.py  4.0.langchain_con_openai_avanzado_LCEL.py  4.1.arquitectura_LangChain.md  4.1.arquitectura_LangChain.txt  5.0.streamlit.md  5.0.streamlit_chatbot.py  5.1.streamlit_chatbot_tarea.py  5.1.tarea.txt
Tema_2/: 1.Ejemplo_runnables.py  2.Taller_analisis_sentimientos_runnables.py  3.0.Prompt_templates.py  3.1.Prompt_template_avanzado.py  3.2.Tarea_ChaPromptTemplate.py  3.2.Tarea_ChaPromptTemplate.txt  4.0.messages_placeholders.py  4.1.Lectura copy.md  5.0.rol_prompt_templates.py  6.0.Output_parsers.py  6.1.1.Metodo_clasico_output_parser.txt  6.1.Output_parsers_2.py
Tema_3/: 1.0.Document_loaders.py  1.1.google_drive_loader.py  1.2.Documentacion_loaders.txt  2.0.text_splitters.py  2.1.text_splitters_sln.py  3.0.embeddings_langchain.py  4.0.vector_stores.py  5.0.retrievers_langchain.py  6.0.multi_query_retriever.py  6.1.documentacion_retrievals.txt
Tema_4_LangGraph/: 2.1.procesador_reuniones_langgraph.py  3.0.annotated_types_langgraph.py  4.0.control_flujo_laggraph.py
Tema_5_Memoria/: 1.0.fundamentos_memoria.py  1.1.fundamentos_memoria_sln_mia.py  1.2.memoria_simple_langchain copy.py  2.0.memoria_simple_langgraph.py  2.1.memoria_ventana_deslizante.py  2.3.Tipos_memoria.md  3.0.memoria_persitente_langgraph.py  3.1.memoria_vectorial_langgraph.py
(+33 files in other folders)
