[project]
name = "curso-langchain-langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.*",
    "langchain-openai",
    "langchain-google-genai",
    "streamlit",
    "dotenv",
    "langchain-community",
    "pypdf",
    "beautifulsoup4",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "PyPDF2",
    "chromadb",
    "langgraph",
    "langgraph-checkpoint-sqlite",
]
